--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- Карточка персонажа -->
     <div class="bg-white bg-opacity-80 backdrop-blur-md rounded-2xl shadow-xl p-10 max-w-xl w-full text-center">
-      <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Gumball_Watterson.png" alt="Гамбол" class="mx-auto w-32 h-auto mb-4">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmedia.2x2tv.ru%2Fgumball-film-i-novye-serii%2F&psig=AOvVaw3uJhAI3cXIEUUXVH2e4Hgd&ust=1743870982302000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPjPiunnvowDFQAAAAAdAAAAABAE" alt="Гамбол" class="mx-auto w-32 h-auto mb-4">
       <h1 class="text-3xl font-bold text-blue-700 mb-4">🌀 Гамбол Уоттерсон</h1>
       <p class="mb-4 text-gray-700">Маленький кот с большим сердцем. Любит приключения, шум, веселье и, конечно же, Дарвина!</p>
 
