--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Всплывающий Дарвин -->
     <div id="darwin" class="text-center">
-      <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Darwin_Watterson.png" alt="Дарвин" class="w-24 mx-auto">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcartoon-network.fandom.com%2Fru%2Fwiki%2F%25D0%2594%25D0%25B0%25D1%2580%25D0%25B2%25D0%25B8%25D0%25BD_%25D0%25A3%25D0%25BE%25D1%2582%25D1%2582%25D0%25B5%25D1%2580%25D1%2581%25D0%25BE%25D0%25BD&psig=AOvVaw2t2nRc5uDwqmdLjs-wVDrl&ust=1744475343932000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPiywpyz0IwDFQAAAAAdAAAAABAE" alt="Дарвин" class="w-24 mx-auto">
       <div class="bg-yellow-100 border border-yellow-400 text-yellow-800 rounded px-3 py-2 mt-2 inline-block max-w-xs">
         <span id="darwin-text">Привет, я Дарвин!</span>
       </div>
