--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- Карточка персонажа -->
     <div class="bg-white bg-opacity-80 backdrop-blur-md rounded-2xl shadow-xl p-10 max-w-xl w-full text-center">
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmedia.2x2tv.ru%2Fgumball-film-i-novye-serii%2F&psig=AOvVaw3uJhAI3cXIEUUXVH2e4Hgd&ust=1743870982302000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPjPiunnvowDFQAAAAAdAAAAABAE" alt="Гамбол" class="mx-auto w-32 h-auto mb-4">
+      <img src="Gumball 2.jpg">
       <h1 class="text-3xl font-bold text-blue-700 mb-4">🌀 Гамбол Уоттерсон</h1>
       <p class="mb-4 text-gray-700">Маленький кот с большим сердцем. Любит приключения, шум, веселье и, конечно же, Дарвина!</p>
 
@@ -92,7 +92,7 @@
 
     <!-- Всплывающий Дарвин -->
     <div id="darwin" class="text-center">
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcartoon-network.fandom.com%2Fru%2Fwiki%2F%25D0%2594%25D0%25B0%25D1%2580%25D0%25B2%25D0%25B8%25D0%25BD_%25D0%25A3%25D0%25BE%25D1%2582%25D1%2582%25D0%25B5%25D1%2580%25D1%2581%25D0%25BE%25D0%25BD&psig=AOvVaw2t2nRc5uDwqmdLjs-wVDrl&ust=1744475343932000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPiywpyz0IwDFQAAAAAdAAAAABAE" alt="Дарвин" class="w-24 mx-auto">
+      <img src="./Darwin.webp" alt="Дарвин" class="w-24 mx-auto">
       <div class="bg-yellow-100 border border-yellow-400 text-yellow-800 rounded px-3 py-2 mt-2 inline-block max-w-xs">
         <span id="darwin-text">Привет, я Дарвин!</span>
       </div>
